fix: add border-bottom to Serices, add text-align justify to About text

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -297,7 +297,9 @@ a {
   }
 
   .services {
-    padding: 68px 40px 68px;
+    padding: 68px 40px 62px;
+    background-color: #f2f2f2;
+    border-bottom: 6px solid #ffffff;
 
     &-title {
       margin-bottom: 27px;
@@ -592,6 +594,7 @@ a {
         line-height: 22px;
         color: #767e9e;
         font-family: "Lato Regular", sans-serif;
+        text-align: justify;
       }
 
       &-links {
